AV2 Changelog :: version a4.1

[[ check does bison drop inventory ]]

+ Added option to avoid blocks being destroyed by earthbenders in stats.yml : preventPickupBlockGriefing
+ Added "/avatar xp" command to easily change ability level & path

* Water pouches are no longer consumed in creative mode
* Sky bison mating avoid overpopulation
* Water arc "Boomerang" works when killed a mob
* Airblade "Chainsaw" upgrade destroys harder blocks (up to hardness 2 vs 0.5)
* Airblade "Chainsaw" can destroy multiple blocks

> Fix misspeilling of talhanation in mcmod.info (mods screen)
> Fix glowing mobs w/ fireball bug
> Fix sky bison not dropping the saddle and armor
> Fix air jump on leaves block not working
> Fix untamed bison are sitting
> Fix firebenders don't watch/follow the player when aggressive
> Fix ravine working on nonbendable blocks only, now only on bendable blocks
> Fix skating jump's "Ground Pound" level IV upgrade not working
> Fix fire arc "Boomerang" upgrade not working